tests/baselines/reference/classAndInterfaceMerge.d.errors.txt
classAndInterfaceMerge.d.ts(9,9): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
classAndInterfaceMerge.d.ts(22,9): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== classAndInterfaceMerge.d.ts (2 errors) ====
    interface C { }
    
    declare class C { }
    
    interface C { }
    
    interface C { }
    
    declare module M {
            ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    
        interface C1 { }
    
        class C1 { }
    
        interface C1 { }
    
        interface C1 { }
    
        export class C2 { }
    }
    
    declare module M {
            ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export interface C2 { }
    }